fixed dark mode

--- a/mission/index.css
+++ b/mission/index.css
@@ -8,12 +8,12 @@ div {
   padding: 40px;
   padding-left: 100px;
   padding-right: 100px;
-  outline: 1px solid var(--primary-color);
+  outline: 1px solid #393939;
 }
 
 body {
-  background-color: var(--base-color);
-  color: var(--text-color);
+  background-color: white;
+  color: black;
 }
 
 h1, h5 {
@@ -22,7 +22,7 @@ h1, h5 {
 }
 
 hr {
-  color: var(--accent-color);
+  color: #25374e;
 }
 
 h1 {
@@ -30,7 +30,7 @@ h1 {
 }
 
 h5 {
-  color: var(--quadrary-text);
+  color: #598ed4;
   letter-spacing: 2px;
   line-height: 30px;
 }
